added a footer content

--- a/index.html
+++ b/index.html
@@ -43,6 +43,12 @@
         <p>Welcome to the Home page.</p>
     </section>
 
+    <!-- Footer Section -->
+    <footer>
+        <p class="copy">© 2020 RobSm!th</p>
+    </footer>
+    <!-- /Footer Section -->
+
 
     <!-- Optional JavaScript -->
     <!-- <script src="js/main.js"></script> -->
