--- a/work.html
+++ b/work.html
@@ -24,7 +24,7 @@
 <body>
     <!-- Header Section for logo and Navigation -->
     <header class="header">
-        <h2 class="logo"><a href="index.html" class="logo-wrapper">Basic</a></h2>
+        <h2 class="logo"><a href="index.html" class="logo-wrapper">HTML5</a></h2>
 
         <!-- Start of Navigation -->
         <nav class="nav_links">
