--- a/404.html
+++ b/404.html
@@ -9,7 +9,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <title>Contact</title>
+    <title>Home</title>
 
     <!-- CSS/Bootstrap/Favicon -->
     <link rel="icon" href="favicon.ico" type="image">
@@ -32,15 +32,15 @@
             <a href="work.html">Work</a>
             <a href="services.html">Services</a>
             <a href="about.html">About</a>
-            <a class="active" href="contact.html">Contact</a>
+            <a href="contact.html">Contact</a>
         </nav>
         <!-- /Start of Navigation -->
 
     </header>
 
     <section class="hero">
-        <h1>Hello World</h1>
-        <p>Welcome to the Contact page.</p>
+        <h1 class="four_h1">404 Page Not Found</h1>
+        <p class="four_p">Sorry, but the page you were trying to view does not exist.</p>
     </section>
 
     <!-- Footer Section -->
@@ -48,6 +48,7 @@
         <p class="copy">© 2020 RobSm!th</p>
     </footer>
     <!-- /Footer Section -->
+
 
     <!-- Optional JavaScript -->
     <!-- <script src="js/main.js"></script> -->
