--- a/work.html
+++ b/work.html
@@ -41,7 +41,15 @@
     <section class="hero">
         <h1>Hello World</h1>
         <p>Welcome to the Work/Portfolio page.</p>
-    </section <!-- Optional JavaScript -->
+    </section>
+    
+    <!-- Footer Section -->
+    <footer>
+        <p class="copy">© 2020 RobSm!th</p>
+    </footer>
+    <!-- /Footer Section -->
+
+    <!-- Optional JavaScript -->
     <!-- <script src="js/main.js"></script> -->
 </body>
 
