added fontawesome to header

--- a/index.html
+++ b/index.html
@@ -11,13 +11,14 @@
     
     <title>Home</title>
 
-    <!-- CSS/Bootstrap/Favicon -->
+    <!-- CSS/Bootstrap/Favicon/Fontawesome -->
     <link rel="icon" href="favicon.ico" type="image">
     <link rel="apple-touch-icon" sizes="180x180" href="img/favicon_ninja/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="img/favicon_ninja/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="img/favicon_ninja/favicon-16x16.png">
     <link rel="manifest" href="/site.webmanifest">
     <link rel="stylesheet" href="css/styles.css">
+    <script src="https://kit.fontawesome.com/6d0ef8f08a.js" crossorigin="anonymous"></script>
 
 </head>
 
