--- a/contact.html
+++ b/contact.html
@@ -18,6 +18,7 @@
     <link rel="icon" type="image/png" sizes="16x16" href="img/favicon_ninja/favicon-16x16.png">
     <link rel="manifest" href="/site.webmanifest">
     <link rel="stylesheet" href="css/styles.css">
+    <script src="https://kit.fontawesome.com/6d0ef8f08a.js" crossorigin="anonymous"></script>
 
 </head>
 
