--- a/index.html
+++ b/index.html
@@ -18,12 +18,14 @@
     <link rel="icon" type="image/png" sizes="16x16" href="img/favicon_ninja/favicon-16x16.png">
     <link rel="manifest" href="/site.webmanifest">
     <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css">
 
 </head>
 
 <body>
     <!-- Header Section for logo and Navigation -->
     <header class="header">
+        <i class="bi bi-file-earmark-code" style="font-size: 1.5rem; color: #fff; margin-right: .2rem;"></i>
         <h2 class="logo"><a href="index.html" class="logo-wrapper">HTML5</a></h2>
 
         <!-- Start of Navigation -->
