--- a/index.html
+++ b/index.html
@@ -19,7 +19,6 @@
     <link rel="manifest" href="/site.webmanifest">
     <link rel="stylesheet" href="css/styles.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css">
-
 </head>
 
 <body>
@@ -46,9 +45,24 @@
     </section>
 
     <!-- Footer Section -->
-    <footer>
-        <p class="copy">© 2020 RobSm!th</p>
+    <div class="s-divider"></div>
+    <footer class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top">
+        <div class="col-md-4 d-flex align-items-center">
+            <a href="/" class="mb-3 me-2 mb-md-0 text-muted text-decoration-none lh-1">
+               <i class="bi bi-bootstrap"></i>
+            </a>
+            <span class="text-muted">
+                <p class="copy">© 2020 RobSm!th</p>
+            </span>
+        </div>
+
+        <nav class="nav col-md-4 justify-content-end list-unstyled d-flex">
+            <a class="text-muted" href="#"><i class="bi bi-facebook"></i></a>
+            <a class="text-muted" href="#"><i class="bi bi-instagram"></i></a>
+            <a class="text-muted" href="#"><i class="bi bi-twitter"></i></a>
+        </nav>
     </footer>
+
     <!-- /Footer Section -->
 
 
