--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="description" content="A basic responsive web page">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    
+
     <title>Home</title>
 
     <!-- CSS/Bootstrap/Favicon/Fontawesome -->
@@ -43,25 +43,28 @@
         <h1>Hello World</h1>
         <p>Welcome to the Home page.</p>
     </section>
+    <div class="s-divider"></div>
 
     <!-- Footer Section -->
-    <div class="s-divider"></div>
-    <footer class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top">
-        <div class="col-md-4 d-flex align-items-center">
-            <a href="/" class="mb-3 me-2 mb-md-0 text-muted text-decoration-none lh-1">
-               <i class="bi bi-bootstrap"></i>
-            </a>
-            <span class="text-muted">
-                <p class="copy">© 2020 RobSm!th</p>
-            </span>
-        </div>
+    <div class="container">
+        <footer class="flex-wrap justify-content-between border-top">
+            <div class="col-md-4 d-flex align-items-center">
+                <a href="/" class="text-muted lh-1">
+                    <i class="bi bi-bootstrap"></i>
+                </a>
+                <span class="text-muted">
+                    <p class="copy">© 2020 RobSm!th</p>
+                </span>
+            </div>
 
-        <nav class="nav col-md-4 justify-content-end list-unstyled d-flex">
-            <a class="text-muted" href="#"><i class="bi bi-facebook"></i></a>
-            <a class="text-muted" href="#"><i class="bi bi-instagram"></i></a>
-            <a class="text-muted" href="#"><i class="bi bi-twitter"></i></a>
-        </nav>
-    </footer>
+            <nav class="nav col-md-4 justify-content-end d-flex">
+                <a class="text-muted" href="#"><i class="bi bi-facebook"></i></a>
+                <a class="text-muted" href="#"><i class="bi bi-instagram"></i></a>
+                <a class="text-muted" href="#"><i class="bi bi-twitter"></i></a>
+            </nav>
+        </footer>
+    </div>
+
 
     <!-- /Footer Section -->
 
