Fixed Footer and added/changed Hero

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
     <link rel="manifest" href="/site.webmanifest">
     <link rel="stylesheet" href="css/styles.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css">
+    <link href="https://fonts.googleapis.com/css2?family=Kanit&display=swap" rel="stylesheet">
 </head>
 
 <body>
@@ -39,12 +40,22 @@
 
     </header>
 
-    <section class="hero">
-        <h1>Hello World</h1>
-        <p>Welcome to the Home page.</p>
+    <section class="container hero">
+        <i class="logo-2 bi bi-bootstrap-fill"></i>
+        <h1 class="display-5 hero-txt">Hello World</h1>
+        <p class="lead hero-txt">Welcome to the Home page.</p>
+        <div class="col-lg-6 mx-auto">
+            <p class="lead hero-txt">Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit dolorum quo, quidem
+                perspiciatis, provident placeat non in eligendi asperiores aperiam atque corporis reprehenderit
+                voluptatum maxime saepe quos vitae, suscipit ducimus.</p>
+            <div class="d-grid gap-2 d-sm-flex justify-content-sm-center">
+                <button type="button" class="btn btn-primary btn-lg px-4 gap-3">Primary button</button>
+                <button type="button" class="btn btn-secondary btn-lg px-4">Secondary</button>
+            </div>
+        </div>
     </section>
-    <div class="s-divider"></div>
 
+    <div class="s-divider"></div>
     <!-- Footer Section -->
     <div class="container">
         <footer class="flex-wrap justify-content-between border-top">
