changed out logo-2 in hero

--- a/contact.html
+++ b/contact.html
@@ -41,7 +41,7 @@
     </header>
 
     <section class="container hero">
-        <i class="logo-2 bi bi-bootstrap-fill"></i>
+        <i class="logo-2 bbi bi-file-earmark-code"></i>
         <h1 class="display-5 hero-txt">Hello World</h1>
         <p class="lead hero-txt">Welcome to the Contact page.</p>
         <div class="col-lg-6 mx-auto">
