--- a/index.html
+++ b/index.html
@@ -60,8 +60,8 @@
     <div class="container">
         <footer class="flex-wrap justify-content-between border-top">
             <div class="col-md-4 d-flex align-items-center">
-                <a href="/" class="text-muted lh-1">
-                    <i class="bi bi-bootstrap"></i>
+                <a href="index.html" class="text-muted lh-1">
+                    <i class="bi bi-file-earmark-code"></i>
                 </a>
                 <span class="text-muted">
                     <p class="copy">© 2020 RobSm!th</p>
@@ -69,9 +69,9 @@
             </div>
 
             <nav class="nav col-md-4 justify-content-end d-flex">
-                <a class="text-muted" href="#"><i class="bi bi-facebook"></i></a>
-                <a class="text-muted" href="#"><i class="bi bi-instagram"></i></a>
-                <a class="text-muted" href="#"><i class="bi bi-twitter"></i></a>
+                <a class="text-muted facebook" href="#"><i class="bi bi-facebook"></i></a>
+                <a class="text-muted instagram" href="#"><i class="bi bi-instagram"></i></a>
+                <a class="text-muted twitter" href="#"><i class="bi bi-twitter"></i></a>
             </nav>
         </footer>
     </div>
