--- a/work.html
+++ b/work.html
@@ -61,7 +61,7 @@
         <footer class="flex-wrap justify-content-between border-top">
             <div class="col-md-4 d-flex align-items-center">
                 <a href="/" class="text-muted lh-1">
-                    <i class="bi bi-bootstrap"></i>
+                    <i class="bi bi-file-earmark-code"></i>
                 </a>
                 <span class="text-muted">
                     <p class="copy">© 2020 RobSm!th</p>
