added github social icon to footer

--- a/index.html
+++ b/index.html
@@ -72,6 +72,7 @@
                 <a class="text-muted facebook" href="#"><i class="bi bi-facebook"></i></a>
                 <a class="text-muted instagram" href="#"><i class="bi bi-instagram"></i></a>
                 <a class="text-muted twitter" href="#"><i class="bi bi-twitter"></i></a>
+                <a class="text-muted github" href="#"><i class="bi bi-github"></i></a>
             </nav>
         </footer>
     </div>
