--- a/work.html
+++ b/work.html
@@ -72,6 +72,7 @@
                 <a class="text-muted" href="#"><i class="bi bi-facebook"></i></a>
                 <a class="text-muted" href="#"><i class="bi bi-instagram"></i></a>
                 <a class="text-muted" href="#"><i class="bi bi-twitter"></i></a>
+                <a class="text-muted github" href="#"><i class="bi bi-github"></i></a>
             </nav>
         </footer>
     </div>
