--- a/work.html
+++ b/work.html
@@ -69,9 +69,9 @@
             </div>
 
             <nav class="nav col-md-4 justify-content-end d-flex">
-                <a class="text-muted" href="#"><i class="bi bi-facebook"></i></a>
-                <a class="text-muted" href="#"><i class="bi bi-instagram"></i></a>
-                <a class="text-muted" href="#"><i class="bi bi-twitter"></i></a>
+                <a class="text-muted facebook" href="#"><i class="bi bi-facebook"></i></a>
+                <a class="text-muted instagram" href="#"><i class="bi bi-instagram"></i></a>
+                <a class="text-muted twitter" href="#"><i class="bi bi-twitter"></i></a>
                 <a class="text-muted github" href="#"><i class="bi bi-github"></i></a>
             </nav>
         </footer>
