started to add responsivness to navbar

--- a/index.html
+++ b/index.html
@@ -36,8 +36,13 @@
             <a href="about.html">About</a>
             <a href="contact.html">Contact</a>
         </nav>
-        <!-- /Start of Navigation -->
 
+        <div class="menu_toggle" onclick="presto(this)">
+            <div class="bar alpha"></div>
+            <div class="bar bravo"></div>
+            <div class="bar charlie"></div>
+        </div>
+        <!-- /Start of Navigation -->
     </header>
 
     <section class="container hero">
@@ -82,7 +87,7 @@
 
 
     <!-- Optional JavaScript -->
-    <!-- <script src="js/main.js"></script> -->
+    <script src="js/main.js"></script>
     <script src="https://kit.fontawesome.com/6d0ef8f08a.js" crossorigin="anonymous"></script>
 
 </body>
